--- a/hello_world.ipynb
+++ b/hello_world.ipynb
@@ -30,6 +30,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(*) Add Credentials (if not added)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IBMQ.save_account('MY_API_TOKEN')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Build 2 quantum cirquit"
    ]
   },
